force-app/main/default/objects/Quote/fields/DSALES_AdquiriopolizaSM__c.field-meta.xml
<CustomField>
    <fullName>DSALES_AdquiriopolizaSM__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Campo que se seleccionara si es que el cliente adquirió una póliza.</description>
    <label>Adquirió póliza SM</label>
    <type>Checkbox</type>
</CustomField>