force-app/main/default/objects/Quote/fields/DSALES_Cdigodemunicipio__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Cdigodemunicipio__c</fullName>
    <label>Código de municipio</label>
    <length>3</length>
    <type>Text</type>
</CustomField>