force-app/main/default/objects/Quote/fields/DSALES_Cdigodepromocin__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Cdigodepromocin__c</fullName>
    <defaultValue>&quot;0&quot;</defaultValue>
    <label>Código de promoción</label>
    <length>1</length>
    <type>Text</type>
</CustomField>