force-app/main/default/objects/Quote/fields/DSALES_Contactarsolicitante__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Contactarsolicitante__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contactar solicitante</label>
    <type>Checkbox</type>
</CustomField>