force-app/main/default/objects/Quote/fields/DSALES_CotEnviada__c.field-meta.xml
<CustomField>
    <fullName>DSALES_CotEnviada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cotización enviada</label>
    <type>Checkbox</type>
</CustomField>