force-app/main/default/objects/Quote/fields/DSALES_Dias_Transcurridos__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Dias_Transcurridos__c</fullName>
    <description>Cuenta el número de dias que han transcurrido del presupuesto</description>
    <formula>DSALES_Fechadecreacionpresupuesto__c - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dias Transcurridos</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>