force-app/main/default/objects/Quote/fields/DSales_Direccion_de_la_tienda__c.field-meta.xml
<CustomField>
    <fullName>DSales_Direccion_de_la_tienda__c</fullName>
    <label>Dirección de la tienda</label>
    <type>TextArea</type>
</CustomField>