force-app/main/default/objects/Quote/fields/DSales_Division__c.field-meta.xml
<CustomField>
    <fullName>DSales_Division__c</fullName>
    <label>División</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DSALES_Division</valueSetName>
    </valueSet>
</CustomField>