force-app/main/default/objects/Quote/fields/DSales_DivisionG__c.field-meta.xml
<CustomField>
    <fullName>DSales_DivisionG__c</fullName>
    <formula>TEXT( DSales_Tienda__r.dsalesDivision__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>División</label>
    <type>Text</type>
</CustomField>