force-app/main/default/objects/Quote/fields/DSALES_EmailNew__c.field-meta.xml
<CustomField>
    <fullName>DSALES_EmailNew__c</fullName>
    <label>Email Solicitante</label>
    <type>Email</type>
</CustomField>