force-app/main/default/objects/Quote/fields/DSALES_esClon__c.field-meta.xml
<CustomField>
    <fullName>DSALES_esClon__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Revisa si la cotización es clon o no</description>
    <label>Es Clon</label>
    <type>Checkbox</type>
</CustomField>