force-app/main/default/objects/Quote/fields/DSALES_Fechadecomienzodepliza__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Fechadecomienzodepliza__c</fullName>
    <label>Fecha de comienzo de póliza</label>
    <type>Date</type>
</CustomField>