force-app/main/default/objects/Quote/fields/DSALES_fechadecreacion__c.field-meta.xml
<CustomField>
    <fullName>DSALES_fechadecreacion__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha de creación</label>
    <type>DateTime</type>
</CustomField>