force-app/main/default/objects/Quote/fields/DSales_ID_Tienda__c.field-meta.xml
<CustomField>
    <fullName>DSales_ID_Tienda__c</fullName>
    <label>ID Tienda</label>
    <length>20</length>
    <type>Text</type>
</CustomField>