force-app/main/default/objects/Quote/fields/DSALES_IDdelasociado__c.field-meta.xml
<CustomField>
    <fullName>DSALES_IDdelasociado__c</fullName>
    <defaultValue>&quot;0&quot;</defaultValue>
    <label>ID del asociado</label>
    <length>1</length>
    <type>Text</type>
</CustomField>