force-app/main/default/objects/Quote/fields/DSALES_Negocio__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Negocio__c</fullName>
    <label>Negocio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Coppel</fullName>
                <default>true</default>
                <label>Coppel</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>