force-app/main/default/objects/Quote/fields/DSALES_NombreCliente__c.field-meta.xml
<CustomField>
    <fullName>DSALES_NombreCliente__c</fullName>
    <formula>IF(Nombre_Cliente_Test__r.IsPersonAccount,Nombre_Cliente_Test__r.FirstName +&quot; &quot;+Nombre_Cliente_Test__r.LastName, Nombre_Cliente_Test__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre Cliente</label>
    <type>Text</type>
</CustomField>