force-app/main/default/objects/Quote/fields/DSALES_Plazoacotizar__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Plazoacotizar__c</fullName>
    <description>Campo para recibir el plazo máximo a cotizar con proveedor.</description>
    <label>Plazo a cotizar</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>