force-app/main/default/objects/Quote/fields/DSALES_PlazoacotizarRC__c.field-meta.xml
<CustomField>
    <fullName>DSALES_PlazoacotizarRC__c</fullName>
    <label>Plazo a cotizar RC</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>