force-app/main/default/objects/Quote/fields/DSALES_Regioon__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Regioon__c</fullName>
    <formula>TEXT(DSales_Tienda__r.dsalesRegion__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Región</label>
    <type>Text</type>
</CustomField>