force-app/main/default/objects/Quote/fields/DSALES_RFC__c.field-meta.xml
<CustomField>
    <fullName>DSALES_RFC__c</fullName>
    <description>Campo para recibir el RFC y realizar la consulta de la lista negra</description>
    <label>RFC</label>
    <length>13</length>
    <type>Text</type>
</CustomField>