force-app/main/default/objects/Quote/fields/DSALES_Suburbcode__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Suburbcode__c</fullName>
    <label>Suburb code</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>