force-app/main/default/objects/Quote/fields/DSALES_Tipodeserviciodelvehculo__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Tipodeserviciodelvehculo__c</fullName>
    <label>Tipo de servicio del vehículo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Particular</fullName>
                <default>true</default>
                <label>Particular</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>