force-app/main/default/objects/Quote/fields/DSALES_Tipodeuso__c.field-meta.xml
<CustomField>
    <fullName>dsalesTipoUso__c</fullName>
    <description>Campo para identificar cual es el tipo de uso del vehículo para la cotización.</description>
    <label>Tipo de uso</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Comercial</fullName>
            </value>
            <value>
                <fullName>Particular</fullName>
            </value>
            <value>
                <fullName>Reparto de comida</fullName>
            </value>
            <value>
                <fullName>Todo terreno</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>