force-app/main/default/objects/Quote/fields/DSALES_Tipodevehculo__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Tipodevehculo__c</fullName>
    <label>Tipo de vehículo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Moto</fullName>
            </value>
            <value>
                <fullName>Carro</fullName>
            </value>
            <value>
                <fullName>Pick up</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>