force-app/main/default/objects/Quote/fields/DSALES_Tipodeveihculo__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Tipodeveihculo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo para relacionar el tipo del vehículo a la cotización</description>
    <label>Tipo de vehículo</label>
    <referenceTo>DSALES_Tipodevehculo__c</referenceTo>
    <relationshipLabel>Cotizaciones</relationshipLabel>
    <relationshipName>Cotizaciones</relationshipName>
    <type>Lookup</type>
</CustomField>