force-app/main/default/objects/Quote/fields/DSALES_TipoUso__c.field-meta.xml
<CustomField>
    <fullName>DSALES_TipoUso__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tipo de Uso</label>
    <referenceTo>dsalesTipoUso__c</referenceTo>
    <relationshipLabel>Cotizaciones</relationshipLabel>
    <relationshipName>Cotizaciones</relationshipName>
    <type>Lookup</type>
</CustomField>