force-app/main/default/objects/Quote/fields/DSALES_TrakingID__c.field-meta.xml
<CustomField>
    <fullName>DSALES_TrakingID__c</fullName>
    <description>Campo para registrar el ID de solicitud de cotización del proveedor</description>
    <label>Tracking ID</label>
    <length>35</length>
    <type>Text</type>
</CustomField>