force-app/main/default/objects/Quote/fields/DSALES_Usodelvehculo__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Usodelvehculo__c</fullName>
    <label>Uso del vehículo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Normal</fullName>
                <default>true</default>
                <label>Normal</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>