force-app/main/default/objects/Quote/fields/dsalesColorCelular__c.field-meta.xml
<CustomField>
    <fullName>dsalesColorCelular__c</fullName>
    <description>Color de celular comprado</description>
    <label>Color Celular</label>
    <length>50</length>
    <type>Text</type>
</CustomField>