force-app/main/default/objects/Quote/fields/dSalesCP__c.field-meta.xml
<CustomField>
    <fullName>dSalesCP__c</fullName>
    <label>C.P.</label>
    <length>15</length>
    <type>Text</type>
</CustomField>