force-app/main/default/objects/Quote/fields/dsalesGenero__c.field-meta.xml
<CustomField>
    <fullName>dsalesGenero__c</fullName>
    <label>Género</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Femenino</fullName>
            </value>
            <value>
                <fullName>M</fullName>
            </value>
            <value>
                <fullName>F</fullName>
            </value>
            <value>
                <fullName>Masculino</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>