force-app/main/default/objects/Quote/fields/dsalesIdDeVehiculo__c.field-meta.xml
<CustomField>
    <fullName>dsalesIdDeVehiculo__c</fullName>
    <label>ID del vehículo</label>
    <length>50</length>
    <type>Text</type>
</CustomField>