force-app/main/default/objects/Quote/fields/dsalesMarcaCelular__c.field-meta.xml
<CustomField>
    <fullName>dsalesMarcaCelular__c</fullName>
    <description>Marca de celular comprado</description>
    <label>Marca celular</label>
    <length>50</length>
    <type>Text</type>
</CustomField>