force-app/main/default/objects/Quote/fields/dsalesModeloCelular__c.field-meta.xml
<CustomField>
    <fullName>dsalesModeloCelular__c</fullName>
    <description>Modelo de celular comprado</description>
    <label>Modelo Celular</label>
    <length>50</length>
    <type>Text</type>
</CustomField>