force-app/main/default/objects/Quote/fields/dsalesOpcionDePago__c.field-meta.xml
<CustomField>
    <fullName>dsalesOpcionDePago__c</fullName>
    <label>Opción de pago</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mensual</fullName>
            </value>
            <value>
                <fullName>Trimestral</fullName>
            </value>
            <value>
                <fullName>Semestral</fullName>
            </value>
            <value>
                <fullName>Anual</fullName>
            </value>
            <value>
                <fullName>Contado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>