force-app/main/default/objects/Quote/fields/dsalesPrecioCelular__c.field-meta.xml
<CustomField>
    <fullName>dsalesPrecioCelular__c</fullName>
    <description>Precio del celular comprado sin descuentos</description>
    <label>Precio Celular</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>