force-app/main/default/objects/Quote/fields/dsalesValorFactura__c.field-meta.xml
<CustomField>
    <fullName>dsalesValorFactura__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para indicar si estamos recibiendo el valor de la factura</description>
    <label>Valor de la factura</label>
    <type>Checkbox</type>
</CustomField>