force-app/main/default/objects/Quote/fields/dsalesVencida__c.field-meta.xml
<CustomField>
    <fullName>dsalesVencida__c</fullName>
    <formula>IF( TODAY() =  ExpirationDate , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vencida</label>
    <type>Checkbox</type>
</CustomField>