force-app/main/default/objects/Quote/fields/Motivo_de_lista_negra__c.field-meta.xml
<CustomField>
    <fullName>dsalesMotivoDeListaNegra__c</fullName>
    <label>Motivo de lista negra</label>
    <length>255</length>
    <type>Text</type>
</CustomField>