force-app/main/default/objects/Quote/fields/Nombre_Cliente_Test__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Cliente_Test__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nombre Cliente Test</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cotizaciones</relationshipLabel>
    <relationshipName>Cotizaciones</relationshipName>
    <type>Lookup</type>
</CustomField>