force-app/main/default/objects/Quote/fields/NOMigrar__c.field-meta.xml
<CustomField>
    <fullName>NOMigrar__c</fullName>
    <description>Región de la tienda donde se consulta la cotización</description>
    <label>RegiónEliminar</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DSALES_Region</valueSetName>
    </valueSet>
</CustomField>