force-app/main/default/objects/Quote/fields/Tiempo_transcurrido__c.field-meta.xml
<CustomField>
    <fullName>Tiempo_transcurrido__c</fullName>
    <formula>IF(
     NOW() - CreatedDate &gt; 0 ,
     TEXT( FLOOR( NOW() - CreatedDate ) ) &amp; &quot; days &quot;
   &amp; TEXT( FLOOR( MOD( (NOW() - CreatedDate ) * 24, 24 ) ) ) &amp; &quot; hours &quot;
   &amp; TEXT( ROUND( MOD( (NOW() - CreatedDate ) * 24 * 60, 60 ), 0 ) ) &amp; &quot; minutes&quot;,
   &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tiempo transcurrido</label>
    <type>Text</type>
</CustomField>