force-app/main/default/objects/Quote/recordTypes/DSALES_VentaGEX.recordType-meta.xml
<RecordType>
    <fullName>DSALES_VentaGEX</fullName>
    <active>true</active>
    <description>Tipo de registro para cotización del producto GEX.</description>
    <label>Venta de Garantía Extendida</label>
</RecordType>