force-app/main/default/objects/Quote/recordTypes/dsalesVentaSeguroCelulares.recordType-meta.xml
<RecordType>
    <fullName>dsalesVentaSeguroCelulares</fullName>
    <active>true</active>
    <description>Tipo de registro para cotización relacionadas a seguro de celulares</description>
    <label>Venta de Seguro de Celulares</label>
</RecordType>