force-app/main/default/objects/Quote/recordTypes/dsalesVentaServicios.recordType-meta.xml
<RecordType>
    <fullName>dsalesVentaServicios</fullName>
    <active>true</active>
    <description>Tipo de registro para cotización del producto de servicios.</description>
    <label>Venta de Servicios</label>
</RecordType>